...
            android:layout_marginLeft="8dp"
            android:text="Set Wallpaper" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_add_to_collection"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
...
