<resources>
    <string name="app_name">WallSplash</string>
    <string name="my_wallpapers">My\nWallpapers</string>
    <string name="view_all">VIEW ALL</string>
    <string name="something_wrong">Something wrong.</string>
    <string name="trending">Trending</string>
    <string name="_new">New</string>
    <string name="photos">Photos</string>
    <string name="collections">Collections</string>
    <string name="transition_photo">transition_photo</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="add_to_collection">Add to Collection</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="view_on_unsplash_com">View on unsplash.com</string>
    <string name="action_share">Share via</string>
    <string name="total_photos">%d Photos</string>
    <string name="a_collection_by_user_name">A Collection by %s</string>
    <string name="create_collection">Create collection</string>
    <string name="db_name">wallsplash-database</string>
    <string name="title_of_collection">Collection\'s Title</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="utm_params"><![CDATA[\?utm_source=wallsplash&utm_medium=referral&utm_campaign=api-credit]]></string>
    <string name="unsplash">Unsplash</string>
    <string name="cache_wallpaper_file_name">wallpaperCache.jpeg</string>
    <string name="fileprovider_postfix">.fileprovider</string>
    <string name="set_as">Set as</string>
    <string name="a_photo_by">A photo by %s</string>
    <string name="name_download_file">WallSplash - %s</string>
    <string name="download_started">Start downloading...</string>
    <string name="need_download_permission">Need permission to download</string>
    <string name="not_found_any_result">Not found any result.</string>
    <string name="photo_added_to">Photo has been added to \'%s\'</string>
    <string name="downloading_wallpaper">Loading. Please wait...</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="about_credit">Unsplash.com\n\nBeautiful, free photos.\nGifted by the world’s most generous community of photographers. </string>

    <string-array name="my_collection_option">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
</resources>
