<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="8dp">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvMyWall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingLeft="150dp"
        android:paddingRight="16dp" />

    <FrameLayout
        android:id="@+id/headerMenuWrapper"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/my_wallpapers"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvViewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/view_all"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </FrameLayout>

</FrameLayout>